--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/mime-types": "^2.1.1",
     "@types/mkdirp": "^1.0.2",
     "@types/node": "^18.0.0",
+    "@types/rimraf": "^3.0.2",
     "jest": "^28.1.1",
     "rimraf": "^3.0.2",
     "ts-jest": "^28.0.5",
